# team-dino

./: .gitignore  README.md  RegistrationPage.html  database-init.md  flake.nix  result
backend/: Cargo.toml  README.md  database-init.md
backend/.sqlx/: query-0813d0700778204aea8cb6b510c2c326f6f48e59c75894099886cf91298482b0.json  query-0b5b013539f057e480f2d0470c4445aa012a727b07f5a25b0cf962c574f37402.json  query-176c588df4e8f825ff8403687ccd22fb24e938df919b1dea08402d240fb14ecf.json  query-2b4ecbf2bb21925b51de68458883688ea1f69949d3420bb432beea7434b5276c.json  query-2cc0cd6283a41bded4eca2aef2763d5d95871fea3b85246d6ca7674ed2b2d704.json  query-3585c6841df9c7d9591e72742fe51031e29f002bd278069ef257c46149d99586.json  query-3be58fef5336a23a27f12f4e32d6e710090888cd5611dce4a23670933b30852b.json  query-3e64f4e9c44e6196600a437af7be1e7e9d5ad801885506d30c84ac989f8c9ce8.json  query-6252bd2b16e09ae27fdfa2e0d4228a35278ae9d89067368ca1da614f920983ac.json  query-632df9b0ada7d3b845ac661d4945e570517f43a8ada4fd86be6f8813c8b938fe.json  query-66c36a5b5b8ed9dedfb3a552f0d1853fee56ae14ae113836ceea903b9e87d4b7.json  query-676bced436fb19e14e5fbfada78a6726d93c1f35d373c37b6cb0f4cd1e4c8c10.json  query-73fe1ed5641d03cc28d33b040c839003a2ccfb8c363bec464f82d58368f696cb.json  query-74fd7d9682d43d019b027f092b6aac708e315a6ab5d87f08bb77facf76764fee.json  query-75670864f350b2fc33bdf2a3ab74b4b464093f7f9e309ad9a284503251b36fa7.json  query-76fa67f7bdd49cec8af50ae46c80ccea6ac083d6763def4872b1dcf0001bfb05.json  query-83e95fb4dd855a3e08d641ba4534dfd27b4bc8e2cadade1c59aca7d314459bf5.json  (+17 more)
backend/src/: db.rs  docs.rs  (+8 more)
(+126 files in other folders)
